[gd_scene load_steps=14 format=3 uid="uid://dpfkju1d15fk2"]

[ext_resource type="Texture2D" uid="uid://bjaawesv3bo6i" path="res://Assets/Dummy/Dummy1.png" id="2_fiuop"]
[ext_resource type="Texture2D" uid="uid://b61tdu7bq45oo" path="res://Assets/Dummy/Dummy2.png" id="3_q32sr"]
[ext_resource type="Texture2D" uid="uid://bivqrxdsuon70" path="res://Assets/Dummy/Dummy3.png" id="4_yikuf"]
[ext_resource type="Texture2D" uid="uid://txjx0jh0g1eh" path="res://Assets/Dummy/Dummy4.png" id="5_0prhu"]
[ext_resource type="Texture2D" uid="uid://d27beew54lqgt" path="res://Assets/Dummy/Dummy5.png" id="6_6ts83"]
[ext_resource type="Texture2D" uid="uid://c0w2qgnm0stsh" path="res://Assets/Dummy/Dummy6.png" id="7_2i1r3"]
[ext_resource type="Texture2D" uid="uid://wv7f1lxg1lve" path="res://Assets/Dummy/Dummy7.png" id="8_7drlk"]
[ext_resource type="Texture2D" uid="uid://8o4hocwm5by7" path="res://Assets/Dummy/Dummy8.png" id="9_f05q2"]
[ext_resource type="Script" path="res://Scripts/dummy.gd" id="9_n4ddw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4lc7h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fiuop")
}, {
"duration": 1.0,
"texture": ExtResource("3_q32sr")
}, {
"duration": 1.0,
"texture": ExtResource("4_yikuf")
}, {
"duration": 1.0,
"texture": ExtResource("5_0prhu")
}, {
"duration": 1.0,
"texture": ExtResource("6_6ts83")
}, {
"duration": 1.0,
"texture": ExtResource("7_2i1r3")
}, {
"duration": 1.0,
"texture": ExtResource("8_7drlk")
}, {
"duration": 1.0,
"texture": ExtResource("9_f05q2")
}],
"loop": true,
"name": &"dummy",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mpdk"]
size = Vector2(13, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ygqa"]
size = Vector2(13, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_p4k3q"]
radius = 42.107

[node name="Dummy" type="StaticBody2D" groups=["enemy"]]
script = ExtResource("9_n4ddw")

[node name="Sprite" type="AnimatedSprite2D" parent="." groups=["sprite"]]
position = Vector2(-2, -16)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_4lc7h")
animation = &"dummy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_0mpdk")

[node name="AreaDummy" type="Area2D" parent="."]
position = Vector2(-2, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDummy"]
position = Vector2(1.49999, 1.99999)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_6ygqa")

[node name="HitboxCerca" type="Area2D" parent="."]
position = Vector2(-2, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxCerca"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_p4k3q")

[connection signal="animation_looped" from="Sprite" to="." method="_on_sprite_animation_looped"]
[connection signal="area_entered" from="AreaDummy" to="." method="_on_dummy_area_entered"]
[connection signal="area_exited" from="AreaDummy" to="." method="_on_area_dummy_area_exited"]
[connection signal="body_entered" from="HitboxCerca" to="." method="_on_hitbox_cerca_body_entered"]
[connection signal="body_exited" from="HitboxCerca" to="." method="_on_hitbox_cerca_body_exited"]
